--- a/src/main.html
+++ b/src/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="app" class="app">
-		<div class="app-canvas">
+		<div class="app-canvas" v-bind:class="{ active: isCtrlKeyPressed }">
 			<canvas ref="canvas"></canvas>
 		</div>
 		<div class="app-controls">
