--- a/src/main.html
+++ b/src/main.html
@@ -11,60 +11,54 @@
 			<canvas ref="canvas"></canvas>
 		</div>
 		<div class="app-controls">
-			<!--<el-upload
-				class="app-upload"
-				ref="upload"
-				:file-list="fileList"
-				:auto-upload="false">
-				<el-button slot="trigger" size="small" type="primary">select file</el-button>
-				<div class="el-upload__tip" slot="tip">jpg/png files with a size less than 500kb</div>
-			</el-upload>-->
-			<template>
-				<el-button-group>
-					<el-button icon="el-icon-edit" v-on:click="handleTextBtnClick">Text</el-button>
-					<el-button icon="el-icon-picture" v-on:click="imageDialogVisible = true">Image</el-button>
-					<el-button type="primary" icon="el-icon-printer" v-on:click="handlePrintBtnClick">Print</el-button>
-				</el-button-group>
-				<el-dialog
-					title="Add an Image"
-					:visible.sync="imageDialogVisible"
-					width="30%"
-					:show-close="false">
-					<el-upload
-						:auto-upload="false"
-						ref="upload">
-						<el-button size="small" type="primary">Click to upload</el-button>
-					</el-upload>
-					<span slot="footer" class="dialog-footer">
-						<el-button @click="handleImageDialogCancel">Cancel</el-button>
-						<el-button type="primary" @click="handleImageDialogConfirm">Confirm</el-button>
-					</span>
-				</el-dialog>
-				<el-dialog
-					title="Printing"
-					:visible.sync="printingDialogVisible"
-					width="30%"
-					:close-on-click-modal="false"
-					:close-on-press-escape="false"
-					:show-close="false">
-					<template v-if="printStatus == 2">
-						<el-progress type="circle" :percentage="printProgress" status="success"></el-progress>
-					</template>
-					<template v-else>
-						<el-progress type="circle" :percentage="printProgress"></el-progress>
-					</template>
-					<span slot="footer" class="dialog-footer">
-						<el-button @click="handlePrintDialogCancel">Cancel</el-button>
+			<div class="app-block">
+					<div class="app-item">
+						<el-button-group>
+							<el-button icon="el-icon-edit" v-on:click="handleTextBtnClick">Text</el-button>
+							<el-button icon="el-icon-picture" v-on:click="imageDialogVisible = true">Image</el-button>
+							<el-button type="primary" icon="el-icon-printer" v-on:click="handlePrintBtnClick">Print</el-button>
+						</el-button-group>
+					</div>
+					<el-dialog
+						title="Add an Image"
+						:visible.sync="imageDialogVisible"
+						width="30%"
+						:show-close="false">
+						<el-upload
+							:auto-upload="false"
+							ref="upload">
+							<el-button size="small" type="primary">Click to upload</el-button>
+						</el-upload>
+						<span slot="footer" class="dialog-footer">
+							<el-button @click="handleImageDialogCancel">Cancel</el-button>
+							<el-button type="primary" @click="handleImageDialogConfirm">Confirm</el-button>
+						</span>
+					</el-dialog>
+					<el-dialog
+						title="Printing"
+						:visible.sync="printingDialogVisible"
+						width="30%"
+						:close-on-click-modal="false"
+						:close-on-press-escape="false"
+						:show-close="false">
 						<template v-if="printStatus == 2">
-							<el-button type="primary" @click="handlePrintDialogCancel">Dismiss</el-button>
+							<el-progress type="circle" :percentage="printProgress" status="success"></el-progress>
 						</template>
-					</span>
-				</el-dialog>
-			</template>
-			<div class="app-object" v-for="object in activeObjects">
+						<template v-else>
+							<el-progress type="circle" :percentage="printProgress"></el-progress>
+						</template>
+						<span slot="footer" class="dialog-footer">
+							<el-button @click="handlePrintDialogCancel">Cancel</el-button>
+							<template v-if="printStatus == 2">
+								<el-button type="primary" @click="handlePrintDialogCancel">Dismiss</el-button>
+							</template>
+						</span>
+					</el-dialog>
+			</div>
+			<div class="app-block" v-for="object in activeObjects">
 				<template v-if="object.type == 'i-text'">
-					<div class="app-object-prop"><el-input-number v-model="lineHeight" :min="0" :max="3" :step="0.02" @change="handleLineHeightChange"></el-input-number></div>
-					<div class="app-object-prop"><el-select v-model="textAlign" placeholder="Select" @change="handleTextAlignChange">
+					<div class="app-item"><el-input-number v-model="lineHeight" :min="0" :max="3" :step="0.02" @change="handleLineHeightChange"></el-input-number></div>
+					<div class="app-item"><el-select v-model="textAlign" placeholder="Select" @change="handleTextAlignChange">
 						<el-option
 							v-for="item in alignOptions"
 							:key="item.value"
@@ -74,15 +68,29 @@
 					</el-select></div>
 				</template>
 				<template v-else>
-					<div class="app-object-prop"><el-button icon="el-icon-refresh" v-on:click="handleRotateBtnClick">Rotate</el-button></div>
+					<div class="app-item"><el-button icon="el-icon-refresh" v-on:click="handleRotateBtnClick">Rotate</el-button></div>
 				</template>
-				<div class="app-object-prop"><el-button icon="el-icon-delete" v-on:click="handleRemoveBtnClick">Remove</el-button></div>
+				<div class="app-item"><el-button icon="el-icon-delete" v-on:click="handleRemoveBtnClick">Remove</el-button></div>
 			</div>
-			<div class="app-filters">
-				<div class="app-filter">
+			<div class="app-block">
+				<div class="app-item">
 					<el-switch v-model="greyScaleEnabled" active-text="Grey scale"></el-switch>
 					<template v-if="greyScaleEnabled">
 						<el-slider v-model="threshold" :min="0" :max="255"></el-slider>
+					</template>
+				</div>
+			</div>
+			<div class="app-block">
+				<div class="app-item">
+					<template>
+						<div class="block">
+							<el-slider
+								v-model="camera.zoom"
+								:min="0.1"
+								:max="2"
+								:step="0.1">
+							</el-slider>
+						</div>
 					</template>
 				</div>
 			</div>
