--- a/src/main.html
+++ b/src/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Printer UI</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<link rel="stylesheet" href="style.css" />
 </head>
@@ -22,7 +23,6 @@
 					<el-dialog
 						title="Add an Image"
 						:visible.sync="imageDialogVisible"
-						width="30%"
 						:show-close="false">
 						<el-upload
 							:auto-upload="false"
@@ -37,7 +37,6 @@
 					<el-dialog
 						title="Printing"
 						:visible.sync="printingDialogVisible"
-						width="30%"
 						:close-on-click-modal="false"
 						:close-on-press-escape="false"
 						:show-close="false">
@@ -88,8 +87,12 @@
 								v-model="camera.zoom"
 								:min="0.1"
 								:max="2"
-								:step="0.1">
+								:step="0.1"
+								@change="handleScaleChange">
 							</el-slider>
+						</div>
+						<div class="block">
+							<el-button @click="handleCenterBtnClick">Center</el-button>
 						</div>
 					</template>
 				</div>
