Implement resizable page

--- a/src/main.html
+++ b/src/main.html
@@ -44,6 +44,7 @@
 							</el-dialog>
 							<el-dialog
 								title="Printing"
+								class="print"
 								:visible.sync="printingDialogVisible"
 								:close-on-click-modal="false"
 								:close-on-press-escape="false"
