Improve mobile speed

--- a/src/main.html
+++ b/src/main.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<title>Printer UI</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lato|Lobster|Montserrat|Open+Sans|Oswald|PT+Serif|Pacifico|Raleway|Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Baloo+Chettan|Exo|Francois+One|Gloria+Hallelujah|Great+Vibes|IBM+Plex+Mono|IM+Fell+French+Canon+SC|Kaushan+Script|Passion+One|Permanent+Marker|Questrial|Righteous|Yanone+Kaffeesatz" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" data-build="true"/>
 </head>
 <body>
