Implement button to restore default printer config

--- a/src/main.html
+++ b/src/main.html
@@ -223,6 +223,13 @@
 							<el-slider v-model="printBreakTime" :min="0" :max="50" @change="handlePrinterConfigChange"></el-slider>
 						</div>
 					</div>
+					<div class="app-block">
+						<div class="app-item">
+							<div class="block">
+								<el-button @click="handleDefaultsBtnClick">Defaults</el-button>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
