Optimised touch gestures

--- a/src/main.html
+++ b/src/main.html
@@ -238,7 +238,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"></script>
 	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/fabric.js/2.2.4/fabric.min.js'></script>
+	<!--<script src='https://cdnjs.cloudflare.com/ajax/libs/fabric.js/2.2.4/fabric.min.js'></script>-->
+	<script src="http://fabricjs.com/lib/fabric_with_gestures.js"></script>
 	<script src="script.js" data-build="true"></script>
 </body>
 </html>
