--- a/src/main.html
+++ b/src/main.html
@@ -20,217 +20,222 @@
 				<el-button icon="el-icon-arrow-down" circle @click="handleToggleClick"></el-button>
 			</div>
 			<div class="app-controls-inner">
-				<div class="app-group">
-					<div class="app-block">
-							<div class="app-item">
-								<el-button-group>
-									<el-button icon="el-icon-edit" v-on:click="handleTextBtnClick">Text</el-button>
-									<el-button icon="el-icon-picture" v-on:click="imageDialogVisible = true">Image</el-button>
-								</el-button-group>
+				<template>
+					<el-tabs v-model="printmode" @tab-click="handlePrintModeTabClick">
+						<el-tab-pane label="Standard" name="standard">
+							<div class="app-group">
+								<div class="app-block">
+									<div class="app-item">
+										<el-button-group>
+											<el-button icon="el-icon-edit" v-on:click="handleTextBtnClick">Text</el-button>
+										</el-button-group>
+										<controls-standard name="Ian"></controls-standard>
+									</div>
+								</div>
 							</div>
+						</el-tab-pane>
+						<el-tab-pane label="Graphic" name="graphic">
+							<div class="app-group">
+								<div class="app-block">
+										<div class="app-item">
+											<el-button-group>
+												<el-button icon="el-icon-edit" v-on:click="handleTextBtnClick">Text</el-button>
+												<el-button icon="el-icon-picture" v-on:click="imageDialogVisible = true">Image</el-button>
+											</el-button-group>
+										</div>
+										<el-dialog
+											title="Add an Image"
+											:visible.sync="imageDialogVisible"
+											:show-close="false">
+											<el-upload
+												:auto-upload="false"
+												ref="upload">
+												<el-button size="small" type="primary">Click to upload</el-button>
+											</el-upload>
+											<span slot="footer" class="dialog-footer">
+												<el-button @click="handleImageDialogCancel">Cancel</el-button>
+												<el-button type="primary" @click="handleImageDialogConfirm">Confirm</el-button>
+											</span>
+										</el-dialog>
+								</div>
+							</div>
+							<template v-if="activeObjects.length > 0">
+								<div class="app-group">
+									<template v-for="object in activeObjects">
+										<template v-if="object.type == 'i-text'">
+											<div class="app-block">
+												<div class="app-item">
+													<div class="app-item-label">Text</div>
+													<el-input
+														v-model="textValue"
+														type="textarea"
+														:rows="2"
+														@input="handleTextValueChange">
+													</el-input>
+												</div>
+											</div>
+											<div class="app-block">
+												<div class="app-item">
+													<div class="app-item-label">Font size</div>
+													<el-input-number v-model="fontSize" :min="10" :max="72" :step="2" @change="handleFontSizeChange"></el-input-number>
+												</div>
+												<div class="app-item">
+													<div class="app-item-label">Line height</div>
+													<el-input-number v-model="lineHeight" :min="0" :max="3" :step="0.02" @change="handleLineHeightChange"></el-input-number>
+												</div>
+												<div class="app-item">
+													<div class="app-item-label">Align text</div>
+													<el-select v-model="textAlign" placeholder="Select" @change="handleTextAlignChange">
+														<el-option
+															v-for="item in alignOptions"
+															:key="item.value"
+															:label="item.label"
+															:value="item.value">
+														</el-option>
+													</el-select>
+												</div>
+												<div class="app-item">
+													<div class="app-item-label">Font family</div>
+													<el-select v-model="fontFamily" placeholder="Select" @change="handleFontFamilyChange">
+														<el-option
+															v-for="item in fontFamilyList"
+															:key="item.value"
+															:label="item.label"
+															:value="item.value">
+															<span :class="'font-'+item.value">{{ item.label }}</span>
+														</el-option>
+													</el-select>
+												</div>
+												<div class="app-item">
+													<div class="app-item-label">Colour</div>
+													<button-invert :canvas="canvas" />
+												</div>
+											</div>
+										</template>
+										<template v-else>
+											<div class="app-block">
+												<div class="app-item">
+													<button-rotate :canvas="canvas"/>
+												</div>
+											</div>
+										</template>
+									</template>
+									<div class="app-block">
+										<div class="app-item">
+											<directions :canvas="canvas" />
+										</div>
+									</div>
+									<div class="app-block">
+										<div class="app-item"><el-button icon="el-icon-delete" v-on:click="handleRemoveBtnClick">Remove</el-button></div>
+									</div>
+								</div>
+							</template>
+							<div class="app-group">
+								<div class="app-block">
+									<div class="app-item">
+										<div>
+											<el-radio-group v-model="filter" @change="handleFilterChange">
+												<el-radio label="1" border>Floyd Steinberg</el-radio>
+												<el-radio label="2" border>Bayer Matrix</el-radio>
+												<el-radio label="3" border>Threshold</el-radio>
+											</el-radio-group>
+										</div>
+									</div>
+								</div>
+								<template v-if="filter == '2'">
+									<div class="app-block">
+										<div class="app-item">
+											<div class="app-item-label">Size</div>
+											<el-radio-group v-model="bayerSize" @change="handleBayerSizeChange">
+												<el-radio label="2">2x2</el-radio>
+												<el-radio label="3">3x3</el-radio>
+												<el-radio label="4">4x4</el-radio>
+												<el-radio label="8">8x8</el-radio>
+											</el-radio-group>
+										</div>
+									</div>
+								</template>
+								<template v-if="filter == '3'">
+									<div class="app-block">
+										<div class="app-item">
+											<div class="app-item-label">Threshold</div>
+											<el-slider v-model="threshold" :min="0" :max="255" @change="handleThresholdChange"></el-slider>
+										</div>
+									</div>
+								</template>
+							</div>
+							<div class="app-group">
+								<div class="app-block">
+									<div class="app-item">
+										<div class="app-item-label">Zoom</div>
+										<slider-zoom :canvas="canvas" :zoom="zoom"></slider-zoom>
+									</div>
+								</div>
+								<div class="app-block">
+									<div class="app-item">
+										<div class="block">
+											<el-button @click="handleCenterBtnClick">Center</el-button>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="app-group">
+								<div class="app-block">
+									<div class="app-item">
+										<div class="app-item-label">Heat Time</div>
+										<el-slider v-model="heatTime" :min="0" :max="255" @change="handlePrinterConfigChange"></el-slider>
+									</div>
+								</div>
+								<div class="app-block">
+									<div class="app-item">
+										<div class="app-item-label">Heat Interval</div>
+										<el-slider v-model="heatInterval" :min="0" :max="100" @change="handlePrinterConfigChange"></el-slider>
+									</div>
+								</div>
+								<div class="app-block">
+									<div class="app-item">
+										<div class="app-item-label">Print Density</div>
+										<el-slider v-model="printDensity" :min="0" :max="50" @change="handlePrinterConfigChange"></el-slider>
+									</div>
+								</div>
+								<div class="app-block">
+									<div class="app-item">
+										<div class="app-item-label">Print Break Time</div>
+										<el-slider v-model="printBreakTime" :min="0" :max="50" @change="handlePrinterConfigChange"></el-slider>
+									</div>
+								</div>
+								<div class="app-block">
+									<div class="app-item">
+										<div class="block">
+											<el-button @click="handleDefaultsBtnClick">Defaults</el-button>
+										</div>
+									</div>
+								</div>
+							</div>
+							<el-button type="primary" icon="el-icon-printer" v-on:click="handlePrintBtnClick" class="btn-print">Print</el-button>
 							<el-dialog
-								title="Add an Image"
-								:visible.sync="imageDialogVisible"
+								title="Printing"
+								class="print"
+								:visible.sync="printingDialogVisible"
+								:close-on-click-modal="false"
+								:close-on-press-escape="false"
 								:show-close="false">
-								<el-upload
-									:auto-upload="false"
-									ref="upload">
-									<el-button size="small" type="primary">Click to upload</el-button>
-								</el-upload>
+								<template v-if="printStatus == 2">
+									<el-progress type="circle" :percentage="printProgress" status="success"></el-progress>
+								</template>
+								<template v-else>
+									<el-progress type="circle" :percentage="printProgress"></el-progress>
+								</template>
 								<span slot="footer" class="dialog-footer">
-									<el-button @click="handleImageDialogCancel">Cancel</el-button>
-									<el-button type="primary" @click="handleImageDialogConfirm">Confirm</el-button>
+									<el-button @click="handlePrintDialogCancel">Cancel</el-button>
+									<template v-if="printStatus == 2">
+										<el-button type="primary" @click="handlePrintDialogCancel">Dismiss</el-button>
+									</template>
 								</span>
 							</el-dialog>
-					</div>
-				</div>
-				<template v-if="activeObjects.length > 0">
-					<div class="app-group">
-						<template v-for="object in activeObjects">
-							<template v-if="object.type == 'i-text'">
-								<div class="app-block">
-									<div class="app-item">
-										<div class="app-item-label">Text</div>
-										<el-input
-											v-model="textValue"
-											type="textarea"
-											:rows="2"
-											@input="handleTextValueChange">
-										</el-input>
-									</div>
-								</div>
-								<div class="app-block">
-									<div class="app-item">
-										<div class="app-item-label">Font size</div>
-										<el-input-number v-model="fontSize" :min="10" :max="72" :step="2" @change="handleFontSizeChange"></el-input-number>
-									</div>
-									<div class="app-item">
-										<div class="app-item-label">Line height</div>
-										<el-input-number v-model="lineHeight" :min="0" :max="3" :step="0.02" @change="handleLineHeightChange"></el-input-number>
-									</div>
-									<div class="app-item">
-										<div class="app-item-label">Align text</div>
-										<el-select v-model="textAlign" placeholder="Select" @change="handleTextAlignChange">
-											<el-option
-												v-for="item in alignOptions"
-												:key="item.value"
-												:label="item.label"
-												:value="item.value">
-											</el-option>
-										</el-select>
-									</div>
-									<div class="app-item">
-										<div class="app-item-label">Font family</div>
-										<el-select v-model="fontFamily" placeholder="Select" @change="handleFontFamilyChange">
-											<el-option
-												v-for="item in fontFamilyList"
-												:key="item.value"
-												:label="item.label"
-												:value="item.value">
-												<span :class="'font-'+item.value">{{ item.label }}</span>
-											</el-option>
-										</el-select>
-									</div>
-									<div class="app-item">
-										<div class="app-item-label">Colour</div>
-										<el-button v-on:click="handleInvertBtnClick">Invert</el-button>
-									</div>
-								</div>
-							</template>
-							<template v-else>
-								<div class="app-block">
-									<div class="app-item">
-										<el-button icon="el-icon-refresh" v-on:click="handleRotateBtnClick">Rotate</el-button>
-									</div>
-								</div>
-							</template>
-						</template>
-						<div class="app-block">
-							<div class="app-item">
-								<div class="keys">
-									<el-button icon="el-icon-caret-top" v-on:click="handleUpBtnClick"></el-button>
-									<el-button icon="el-icon-caret-left" v-on:click="handleLeftBtnClick"></el-button>
-									<el-button icon="el-icon-caret-bottom" v-on:click="handleDownBtnClick"></el-button>
-									<el-button icon="el-icon-caret-right" v-on:click="handleRightBtnClick"></el-button>
-								</div>
-							</div>
-						</div>
-						<div class="app-block">
-							<div class="app-item"><el-button icon="el-icon-delete" v-on:click="handleRemoveBtnClick">Remove</el-button></div>
-						</div>
-					</div>
+						</el-tab-pane>
+					</el-tabs>
 				</template>
-				<div class="app-group">
-					<div class="app-block">
-						<div class="app-item">
-							<div>
-								<el-radio-group v-model="filter" @change="handleFilterChange">
-									<el-radio label="1" border>Floyd Steinberg</el-radio>
-									<el-radio label="2" border>Bayer Matrix</el-radio>
-									<el-radio label="3" border>Threshold</el-radio>
-								</el-radio-group>
-							</div>
-						</div>
-					</div>
-					<template v-if="filter == '2'">
-						<div class="app-block">
-							<div class="app-item">
-								<div class="app-item-label">Size</div>
-								<el-radio-group v-model="bayerSize" @change="handleBayerSizeChange">
-									<el-radio label="2">2x2</el-radio>
-									<el-radio label="3">3x3</el-radio>
-									<el-radio label="4">4x4</el-radio>
-									<el-radio label="8">8x8</el-radio>
-								</el-radio-group>
-							</div>
-						</div>
-					</template>
-					<template v-if="filter == '3'">
-						<div class="app-block">
-							<div class="app-item">
-								<div class="app-item-label">Threshold</div>
-								<el-slider v-model="threshold" :min="0" :max="255" @change="handleThresholdChange"></el-slider>
-							</div>
-						</div>
-					</template>
-				</div>
-				<div class="app-group">
-					<div class="app-block">
-						<div class="app-item">
-							<div class="app-item-label">Zoom</div>
-							<template>
-								<el-slider
-									v-model="zoom"
-									:min="minZoom"
-									:max="maxZoom"
-									:step="0.1"
-									@change="handleScaleChange">
-								</el-slider>
-							</template>
-						</div>
-					</div>
-					<div class="app-block">
-						<div class="app-item">
-							<div class="block">
-								<el-button @click="handleCenterBtnClick">Center</el-button>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="app-group">
-					<div class="app-block">
-						<div class="app-item">
-							<div class="app-item-label">Heat Time</div>
-							<el-slider v-model="heatTime" :min="0" :max="255" @change="handlePrinterConfigChange"></el-slider>
-						</div>
-					</div>
-					<div class="app-block">
-						<div class="app-item">
-							<div class="app-item-label">Heat Interval</div>
-							<el-slider v-model="heatInterval" :min="0" :max="100" @change="handlePrinterConfigChange"></el-slider>
-						</div>
-					</div>
-					<div class="app-block">
-						<div class="app-item">
-							<div class="app-item-label">Print Density</div>
-							<el-slider v-model="printDensity" :min="0" :max="50" @change="handlePrinterConfigChange"></el-slider>
-						</div>
-					</div>
-					<div class="app-block">
-						<div class="app-item">
-							<div class="app-item-label">Print Break Time</div>
-							<el-slider v-model="printBreakTime" :min="0" :max="50" @change="handlePrinterConfigChange"></el-slider>
-						</div>
-					</div>
-					<div class="app-block">
-						<div class="app-item">
-							<div class="block">
-								<el-button @click="handleDefaultsBtnClick">Defaults</el-button>
-							</div>
-						</div>
-					</div>
-				</div>
-				<el-button type="primary" icon="el-icon-printer" v-on:click="handlePrintBtnClick" class="btn-print">Print</el-button>
-				<el-dialog
-					title="Printing"
-					class="print"
-					:visible.sync="printingDialogVisible"
-					:close-on-click-modal="false"
-					:close-on-press-escape="false"
-					:show-close="false">
-					<template v-if="printStatus == 2">
-						<el-progress type="circle" :percentage="printProgress" status="success"></el-progress>
-					</template>
-					<template v-else>
-						<el-progress type="circle" :percentage="printProgress"></el-progress>
-					</template>
-					<span slot="footer" class="dialog-footer">
-						<el-button @click="handlePrintDialogCancel">Cancel</el-button>
-						<template v-if="printStatus == 2">
-							<el-button type="primary" @click="handlePrintDialogCancel">Dismiss</el-button>
-						</template>
-					</span>
-				</el-dialog>
 			</div>
 		</div>
 	</div>
