--- a/src/main.html
+++ b/src/main.html
@@ -145,7 +145,7 @@
 							</div>
 						</div>
 					</template>
-					<template v-if="filter == '3'">
+					<template v-if="filter == '3' || filter == '2'">
 						<div class="app-block">
 							<div class="app-item">
 								<div class="app-item-label">Threshold</div>
