--- a/src/main.html
+++ b/src/main.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Printer UI</title>
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+	<link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.14/lib/theme-chalk/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lato|Lobster|Montserrat|Open+Sans|Oswald|PT+Serif|Pacifico|Raleway|Roboto" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Baloo+Chettan|Exo|Francois+One|Gloria+Hallelujah|Great+Vibes|IBM+Plex+Mono|IM+Fell+French+Canon+SC|Kaushan+Script|Passion+One|Permanent+Marker|Questrial|Righteous|Yanone+Kaffeesatz" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" data-build="true"/>
@@ -256,12 +256,12 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.7.15"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"></script>
-	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+	<script src="https://unpkg.com/element-ui@2.15.14/lib/index.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
 	<!--<script src='https://cdnjs.cloudflare.com/ajax/libs/fabric.js/2.2.4/fabric.min.js'></script>-->
-	<script src="http://fabricjs.com/lib/fabric_with_gestures.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
 	<script src="script.js" data-build="true"></script>
 </body>
 </html>
